fix typo in display

--- a/Web-Development/Ruby-On-Rails/1 - Getting Started/Project-Broadway/pages.css.scss
+++ b/Web-Development/Ruby-On-Rails/1 - Getting Started/Project-Broadway/pages.css.scss
@@ -14,7 +14,7 @@ ul li {
 }
 
 .main a {
-  posiion: inline-block;
+  display: inline-block;
   width: 60px;
   border: 2px solid black;
   text-decoration: none;
